# rrdcached-client

./: Cargo.toml  README.md  rrdcached.Dockerfile
.github/workflows/: ci.yml
src/: batch_update.rs  client.rs  create.rs  errors.rs  fetch.rs  lib.rs  now.rs  parsers.rs  sanitisation.rs
tests/: integration_tests.rs
