[package]
name = "rrdcached-client"
version = "0.1.2"
edition = "2021"
description = "A RRDCached (RRDtool) client library"
license = "Apache-2.0"
keywords = ["rrdcached", "rrdtool", "rrd"]
documentation = "https://docs.rs/rrdcached-client"
authors = ["Antoine Pultier <antoine.pultier@sintef.no>"]
repository = "https://github.com/SINTEF/rrdcached-client"
include = ["README.md", "LICENSE", "src/*.rs", "Cargo.toml", "Cargo.lock"]

[dependencies]
tokio = { version = "1.39", features = ["full"] }
nom = "7.1"
thiserror = "1.0"

[dev-dependencies]
serial_test = "3.1"
